<resources>
    <string name="app_name">AndroidAdvAps1</string>
    <string name="value_type">digite o valor</string>
    <string name="converter">Converter</string>
    <string name="valor">Valor</string>
    <string name="para">para</string>
    <string name="de">De</string>
    <string name="conversor_de_moedas">Conversor de Moedas</string>
    <string name="appstarted">Started</string>
    <string name="coin">moeda</string>
</resources>